--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,24 @@
 {
-  "name": "force/token",
+  "name": "flextype-components/token",
   "keywords": ["token"],
+  "type": "library",
   "license": "MIT",
-  "homepage": "https://github.com/force-components/Token/issues",
+  "homepage": "https://github.com/flextype-components/token",
   "description": "Simple Token Class",
   "authors": [
     {
         "name": "Sergey Romanenko",
-        "email": "awilum@msn.com"
+        "email": "awilum@yandex.ru"
     }
   ],
   "support": {
-    "issues": "https://github.com/force-components/Token/issues"
-  },
-  "autoload": {
-    "files": [
-      "Token.php"
-    ]
+    "issues": "https://github.com/flextype-components/token/issues"
   },
   "require": {
-    "php": ">=5.3.0",
-    "force/session": "*"
+      "php": "^7.1.3",
+      "flextype-components/session": "*"
+  },
+  "autoload": {
+      "psr-4": { "Flextype\\Component\\Token\\": "" }
   }
 }
